fixed key alignment, layout change to make the notes section and description section have the same width

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -66,6 +66,7 @@ body {
 .notes-youtube-container {
   display: flex;
   align-items: flex-start; /* Ensure aligned to the top */
+  justify-content: space-between; /* Distribute space evenly between sections */
   max-width: 100%; /*Adjust based on your preference*/
   margin-top: 0%;
 }
@@ -105,7 +106,7 @@ body {
 .youtube-embed {
 
   display: flex;
-  flex: 1; /* Take up equal space */
+  flex: 1.5; /* Take up twice the space of notes and description */
  
   border: 8px solid #EBE0D5; /* Light blue border */
   border-radius: 5px; /* Rounded corners */
@@ -126,7 +127,6 @@ body {
 }
 
 #description {
-  flex: 1; /* Take up equal space */
   font-family: Goudy Old Style,Garamond,Big Caslon,Times New Roman,serif; 
   font-size: 30px; /* Adjust font size as needed */
   font-weight: 400; /* Normal font weight */
@@ -139,7 +139,8 @@ body {
 }
 
 .skills-description {
-  
+  flex: 1; /* Take up equal space */
+
   margin-left: 1%;
   margin-right: 2%;
 
